@@ -13,4 +13,11 @@ FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
 COPY --from=builder /app/build/libs/*.jar app.jar
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar"]
+STOPSIGNAL SIGTERM
+ENTRYPOINT ["java", \
+    "-XX:+UseZGC", \
+    "-XX:+ZGenerational", \
+    "-XX:MaxRAMPercentage=75.0", \
+    "-XX:+AlwaysPreTouch", \
+    "-Djava.security.egd=file:/dev/./urandom", \
+    "-jar", "app.jar"]
